
5.49  2014-10-09
  - Improved form content generator to allow custom content types.

5.48  2014-10-07
  - Emergency release for a serious security issue that can result in
    parameter injection attacks, everybody should update!
    Breaking change: Methods that previously worked differently in scalar than
    in list context now always assume scalar context, and new methods have
    been added to cover the list context functionality.
  - Added every_cookie and every_upload methods to Mojo::Message.
  - Added every_param method to Mojo::Message::Request.
  - Added every_param method to Mojo::Parameters.
  - Added every_cookie, every_param and every_signed_cookie methods to
    Mojolicious::Controller.
  - Added every_param method to Mojolicious::Validator::Validation.
  - Added from_json and to_json functions to Mojo::JSON.
  - Improved pluck method in Mojo::Collection to be able to extract values
    from hash references.

5.47  2014-09-28
  - Improved url_for performance.

5.46  2014-09-26
  - PAUSE lost the previous release.

5.45  2014-09-26
  - Deprecated Mojolicious::Routes::Route::has_conditions.
  - Added extracting attribute to Mojo::UserAgent::CookieJar.
  - Improved performance of next, next_sibling, previous and previous_sibling
    methods in Mojo::DOM significantly.
  - Improved Mojo::Cache to allow caching to be disabled. (mvgrimes, sri)
  - Fixed url_for bug where deeply nested WebSocket routes would not work
    correctly.

5.44  2014-09-23
  - Fixed bug in Mojolicious::Renderer that prevented proxy objects from being
    reused.

5.43  2014-09-22
  - Updated Makefile.PL for version 2 of the CPAN distribution metadata
    specification.
  - Improved get command to not depend on Content-Type headers for
    differentiating between JSON and HTML/XML.

5.42  2014-09-17
  - Fixed url_for bug where an unnecessary slash could be rendered before
    formats.

5.41  2014-09-13
  - Deprecated Mojolicious::Controller::render_static in favor of