@@ -1,0 +1,5 @@
+use Mojolicious::Lite;
+
+app->config(script => $0);
+
+app->start;
